objects/VisitOps__Presenter_Expertise_Link__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__Area_of_Expertise__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area of Expertise</label>
        <referenceTo>VisitOps__Expertise_Area__c</referenceTo>
        <relationshipLabel>Presenter Expertise Links</relationshipLabel>
        <relationshipName>Persenter_Expertise_Links1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Presenter_Name__c</fullName>
        <formula>VisitOps__Presenter__r.VisitOps__Presenter_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presenter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Presenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Presenter</label>
        <referenceTo>VisitOps__Presenter__c</referenceTo>
        <relationshipLabel>Presenter Expertise Links</relationshipLabel>
        <relationshipName>Persenter_Expertise_Links1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Presenter Expertise Link</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__Area_of_Expertise__c</columns>
        <columns>VisitOps__Presenter_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PE{0000}</displayFormat>
        <label>PresenterExpertiseLink Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presenter Expertise Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>